--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
+    <main></main>
     <body>
-        <p>This is a test.</p>
+        <p>This book can read in 1&#xA0;hour.</p>
     </body>
 </html>
