Begun adding content (header, main, footer)

--- a/index.html
+++ b/index.html
@@ -1,7 +1,33 @@
 <!DOCTYPE html>
 <html>
-    <main></main>
+    <head>
+        <title>WDD 230 Assignment Portal</title>
+    </head>
     <body>
-        <p>This book can read in 1&#xA0;hour.</p>
+        <header>
+            <img src="">
+            <h1>Daniel G. Rasmussen</h1>
+        </header>
+
+        <main>
+            <h2>WDD 230 Assignment Portal</h2>
+            <ul>
+                <li>Lesson 02: <a href="google.com">Title</a></li>
+                <li>Lesson 03:</li>
+                <li>Lesson 04:</li>
+                <li>Lesson 05:</li>
+                <li>Lesson 06:</li>
+                <li>Lesson 07</li>
+                <li>Lesson 08</li>
+                <li>Lesson 09</li>
+                <li>Lesson 10</li>
+                <li>Lesson 11</li>
+            </ul>
+            <p></p>
+        </main>
+        <footer>
+            <p>&copy; 2022 | Daniel G. Rasmussen | Arizona</p>
+            <p>Last Updated: </p>
+        </footer>
     </body>
 </html>
