--- a/index.html
+++ b/index.html
@@ -12,16 +12,16 @@
         <main>
             <h2>WDD 230 Assignment Portal</h2>
             <ul>
-                <li>Lesson 02: <a href="google.com">Title</a></li>
-                <li>Lesson 03:</li>
-                <li>Lesson 04:</li>
-                <li>Lesson 05:</li>
-                <li>Lesson 06:</li>
-                <li>Lesson 07</li>
-                <li>Lesson 08</li>
-                <li>Lesson 09</li>
-                <li>Lesson 10</li>
-                <li>Lesson 11</li>
+                <li>Lesson 02: <a href="https://google.com" target="_blank">Title</a></li>
+                <li>Lesson 03: <a href="https://google.com" target="_blank">Title</a></li>
+                <li>Lesson 04: <a href="https://google.com" target="_blank">Title</a></li>
+                <li>Lesson 05: <a href="https://google.com" target="_blank">Title</a></li>
+                <li>Lesson 06: <a href="https://google.com" target="_blank">Title</a></li>
+                <li>Lesson 07: <a href="https://google.com" target="_blank">Title</a></li>
+                <li>Lesson 08: <a href="https://google.com" target="_blank">Title</a></li>
+                <li>Lesson 09: <a href="https://google.com" target="_blank">Title</a></li>
+                <li>Lesson 10: <a href="https://google.com" target="_blank">Title</a></li>
+                <li>Lesson 11: <a href="https://google.com" target="_blank">Title</a></li>
             </ul>
             <p></p>
         </main>
