--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <title>WDD 230 Assignment Portal</title>
+        <script src="main.js"></script>
     </head>
     <body>
         <header>
@@ -23,10 +24,9 @@
                 <li>Lesson 10: <a href="https://google.com" target="_blank">Title</a></li>
                 <li>Lesson 11: <a href="https://google.com" target="_blank">Title</a></li>
             </ul>
-            <p></p>
         </main>
         <footer>
-            <p>&copy; 2022 | Daniel G. Rasmussen | Arizona</p>
+            <p>© 2022 | Daniel G. Rasmussen | Arizona</p>
             <p>Last Updated: </p>
         </footer>
     </body>
