--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>WDD 230 Assignment Portal</title>
-        <script src="main.js"></script>
+        <script type="text/javascript" src="main.js"></script>
     </head>
     <body>
         <header>
