--- a/index.html
+++ b/index.html
@@ -13,21 +13,21 @@
         <main>
             <h2>WDD 230 Assignment Portal</h2>
             <ul>
-                <li>Lesson 02: <a href="https://google.com" target="_blank">Title</a></li>
-                <li>Lesson 03: <a href="https://google.com" target="_blank">Title</a></li>
-                <li>Lesson 04: <a href="https://google.com" target="_blank">Title</a></li>
-                <li>Lesson 05: <a href="https://google.com" target="_blank">Title</a></li>
-                <li>Lesson 06: <a href="https://google.com" target="_blank">Title</a></li>
-                <li>Lesson 07: <a href="https://google.com" target="_blank">Title</a></li>
-                <li>Lesson 08: <a href="https://google.com" target="_blank">Title</a></li>
-                <li>Lesson 09: <a href="https://google.com" target="_blank">Title</a></li>
-                <li>Lesson 10: <a href="https://google.com" target="_blank">Title</a></li>
-                <li>Lesson 11: <a href="https://google.com" target="_blank">Title</a></li>
+                <li>Lesson 02: <a href="#" target="_blank">Title</a></li>
+                <li>Lesson 03: <a href="#" target="_blank">Title</a></li>
+                <li>Lesson 04: <a href="#" target="_blank">Title</a></li>
+                <li>Lesson 05: <a href="#" target="_blank">Title</a></li>
+                <li>Lesson 06: <a href="#" target="_blank">Title</a></li>
+                <li>Lesson 07: <a href="#" target="_blank">Title</a></li>
+                <li>Lesson 08: <a href="#" target="_blank">Title</a></li>
+                <li>Lesson 09: <a href="#" target="_blank">Title</a></li>
+                <li>Lesson 10: <a href="#" target="_blank">Title</a></li>
+                <li>Lesson 11: <a href="#" target="_blank">Title</a></li>
             </ul>
         </main>
         <footer>
             <p>© 2022 | Daniel G. Rasmussen | Arizona</p>
-            <p>Last Updated: </p>
+            <p id="lastUpdated"></p>
         </footer>
     </body>
 </html>
