--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <html>
     <head>
         <title>WDD 230 Assignment Portal</title>
-        <script type="text/javascript" src="main.js"></script>
     </head>
     <body>
         <header>
@@ -27,7 +26,8 @@
         </main>
         <footer>
             <p>© 2022 | Daniel G. Rasmussen | Arizona</p>
-            <p id="lastUpdated"></p>
+            <p id="lastUpdated">This is a test</p>
         </footer>
+        <script type="text/javascript" src="main.js"></script>
     </body>
 </html>
