--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <title>WDD 230 Assignment Portal</title>
+        <style type="text/css" src="main.css"></style>
     </head>
     <body>
         <header>
@@ -26,7 +27,7 @@
         </main>
         <footer>
             <p>© 2022 | Daniel G. Rasmussen | Arizona</p>
-            <p id="lastUpdated">This is a test</p>
+            <p id="lastUpdated"></p>
         </footer>
         <script type="text/javascript" src="main.js"></script>
     </body>
