Added css for header

--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html>
     <head>
         <title>WDD 230 Assignment Portal</title>
-        <style type="text/css" src="main.css"></style>
+        <link rel="stylesheet" href="main.css">
     </head>
     <body>
         <header>
-            <img src="">
+            <img src="picture.jpg">
             <h1>Daniel G. Rasmussen</h1>
         </header>
 
