Added CSS for main and footer

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             </ul>
         </main>
         <footer>
-            <p>© 2022 | Daniel G. Rasmussen | Arizona</p>
+            <p id="info">© 2022 | Daniel G. Rasmussen | Arizona</p>
             <p id="lastUpdated"></p>
         </footer>
         <script type="text/javascript" src="main.js"></script>
