Changed colors and fixed requirements

--- a/index.html
+++ b/index.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <meta charset="utf-8">
         <title>WDD 230 Assignment Portal</title>
         <link rel="stylesheet" href="main.css">
+        <meta name="author" content="Danel G. Rasmussen">
+        <meta name="description" content="The hub for links to all other WDD 230 assignments.">
     </head>
     <body>
         <header>
-            <img src="picture.jpg">
+            <img src="picture.jpg" alt="Picture of Daniel G. Rasmussen">
             <h1>Daniel G. Rasmussen</h1>
         </header>
 
