Added more proper formatting.

--- a/index.html
+++ b/index.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
         <meta charset="utf-8">
         <title>WDD 230 Assignment Portal</title>
-        <link rel="stylesheet" href="main.css">
+        <link rel="stylesheet" href="css/main.css">
         <meta name="author" content="Danel G. Rasmussen">
-        <meta name="description" content="The hub for links to all other WDD 230 assignments.">
+        <meta name="description" content="The hub for links to all other of Daniel Rasmussen's WDD 230 assignments.">
     </head>
     <body>
         <header>
-            <img src="picture.jpg" alt="Picture of Daniel G. Rasmussen">
+            <img src="images/myPicture.jpg" alt="Picture of Daniel G. Rasmussen">
             <h1>Daniel G. Rasmussen</h1>
         </header>
 
@@ -29,9 +29,9 @@
             </ul>
         </main>
         <footer>
-            <p id="info">© 2022 | Daniel G. Rasmussen | Arizona</p>
+            <p id="info"></p>
             <p id="lastUpdated"></p>
         </footer>
-        <script type="text/javascript" src="main.js"></script>
+        <script type="text/javascript" src="js/main.js"></script>
     </body>
 </html>
