Followed instructions from reading.

--- a/index.html
+++ b/index.html
@@ -3,9 +3,15 @@
     <head>
         <meta charset="utf-8">
         <title>WDD 230 Assignment Portal</title>
-        <link rel="stylesheet" href="css/main.css">
         <meta name="author" content="Danel G. Rasmussen">
         <meta name="description" content="The hub for links to all other of Daniel Rasmussen's WDD 230 assignments.">
+
+        <link rel="stylesheet" href="css/normalize.css">
+        <link rel="stylesheet" href="css/small.css">
+        <link rel="stylesheet" href="css/medium.css">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Noto+Sans&display=swap" rel="stylesheet">
     </head>
     <body>
         <header>
