Added files for lesson 2 and basic formatting

--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
     <head>
         <meta charset="utf-8">
         <title>WDD 230 Assignment Portal</title>
+        <meta http-equiv="Refresh" content="0; url='lesson2/design-principles.html'" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="author" content="Danel G. Rasmussen">
         <meta name="description" content="The hub for links to all other of Daniel Rasmussen's WDD 230 assignments.">
 
@@ -22,16 +24,16 @@
         <main>
             <h2>WDD 230 Assignment Portal</h2>
             <ul>
-                <li>Lesson 02: <a href="#" target="_blank">Title</a></li>
-                <li>Lesson 03: <a href="#" target="_blank">Title</a></li>
-                <li>Lesson 04: <a href="#" target="_blank">Title</a></li>
-                <li>Lesson 05: <a href="#" target="_blank">Title</a></li>
-                <li>Lesson 06: <a href="#" target="_blank">Title</a></li>
-                <li>Lesson 07: <a href="#" target="_blank">Title</a></li>
-                <li>Lesson 08: <a href="#" target="_blank">Title</a></li>
-                <li>Lesson 09: <a href="#" target="_blank">Title</a></li>
-                <li>Lesson 10: <a href="#" target="_blank">Title</a></li>
-                <li>Lesson 11: <a href="#" target="_blank">Title</a></li>
+                <li>Lesson 02: <a href="lesson2/design-principles.html">Design Principles</a></li>
+                <li>Lesson 03: <a href="#">Lesson 3</a></li>
+                <li>Lesson 04: <a href="#">Lesson 4</a></li>
+                <li>Lesson 05: <a href="#">Lesson 5</a></li>
+                <li>Lesson 06: <a href="#">Lesson 6</a></li>
+                <li>Lesson 07: <a href="#">Lesson 7</a></li>
+                <li>Lesson 08: <a href="#">Lesson 8</a></li>
+                <li>Lesson 09: <a href="#">Lesson 9</a></li>
+                <li>Lesson 10: <a href="#">Lesson 10</a></li>
+                <li>Lesson 11: <a href="#">Lesson 11</a></li>
             </ul>
         </main>
         <footer>
