Added formatting for cards and fillter content.

--- a/lesson2/design-principles.html
+++ b/lesson2/design-principles.html
@@ -23,7 +23,39 @@
         </header>
 
         <main>
-            
+            <h3>Principle 1</h3>
+            <div class="principles">
+                <p>
+                    Company name<br>
+                    Website link
+                </p>
+                <img src="https://via.placeholder.com/150" alt="Picture of company's website in mobile view.">
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc pharetra turpis ut leo facilisis bibendum. Nunc congue suscipit lectus, eu commodo dolor dapibus eget. Mauris nibh eros, semper id ligula sit amet, tempor fringilla sapien. Curabitur pretium aliquet justo. Nam.
+                </p>
+            </div>
+            <h3>Principle 2</h3>
+            <div class="principles">
+                <p>
+                    Company name<br>
+                    Website link
+                </p>
+                <img src="https://via.placeholder.com/150" alt="Picture of company's website in mobile view.">
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc pharetra turpis ut leo facilisis bibendum. Nunc congue suscipit lectus, eu commodo dolor dapibus eget. Mauris nibh eros, semper id ligula sit amet, tempor fringilla sapien. Curabitur pretium aliquet justo. Nam.
+                </p>
+            </div>
+            <h3>Principle 3</h3>
+            <div class="principles">
+                <p>
+                    Company name<br>
+                    Website link
+                </p>
+                <img src="https://via.placeholder.com/150" alt="Picture of company's website in mobile view.">
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc pharetra turpis ut leo facilisis bibendum. Nunc congue suscipit lectus, eu commodo dolor dapibus eget. Mauris nibh eros, semper id ligula sit amet, tempor fringilla sapien. Curabitur pretium aliquet justo. Nam.
+                </p>
+            </div>
         </main>
         <footer>
             <p id="info"></p>
