Added text content and fixed css which broke.

--- a/lesson2/design-principles.html
+++ b/lesson2/design-principles.html
@@ -5,7 +5,7 @@
         <title>Design Principles</title>
         <meta name="author" content="Danel G. Rasmussen">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta name="description" content="The hub for links to all other of Daniel Rasmussen's WDD 230 assignments.">
+        <meta name="description" content="Explainations of important design principles for web development.">
 
         <link rel="stylesheet" href="../css/normalize.css">
         <link rel="stylesheet" href="../css/all.css">
@@ -25,31 +25,31 @@
         <main>
             <div id="principle1-2">
                 <div class="principles" id="principle1">
-                    <h3>Principle 1</h3>
+                    <h3>PARC: Contrast</h3>
                     <p>
-                        Company name<br>
-                        Website link<br>
+                        Google<br>
+                        <a href="https://www.google.com" target="_blank">google.com</a><br>
                         <img src="https://via.placeholder.com/150" alt="Picture of company's website in mobile view."><br>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc pharetra turpis ut leo facilisis bibendum. Nunc congue suscipit lectus, eu commodo dolor dapibus eget. Mauris nibh eros, semper id ligula sit amet, tempor fringilla sapien. Curabitur pretium aliquet justo. Nam.
+                        They use contrast to direct your eyes to the trending searches. They also use make the menu noticeable but not in your face.
                     </p>
                 </div>
                 <div class="principles" id="principle2">
-                    <h3>Principle 2</h3>
+                    <h3>Hick's Law</h3>
                     <p>
-                        Company name<br>
-                        Website link<br>
+                        Box Novel<br>
+                        <a href="https://myboxnovel.com" target="_blank">myboxnovel.com</a><br>
                         <img src="https://via.placeholder.com/150" alt="Picture of company's website in mobile view."><br>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc pharetra turpis ut leo facilisis bibendum. Nunc congue suscipit lectus, eu commodo dolor dapibus eget. Mauris nibh eros, semper id ligula sit amet, tempor fringilla sapien. Curabitur pretium aliquet justo. Nam.
+                        There are not many options. There are just 2 sections at first, action and adventure. There are only 5 book options at any time. 
                     </p>
                 </div>
             </div>
             <div class="principles" id="principle3">
-                <h3>Principle 3</h3>
+                <h3>Visual Hierarchy</h3>
                 <p>
-                    Company name<br>
-                    Website link<br>
+                    Shutterfly<br>
+                    <a href="https://www.shutterfly.com" target="_blank">shutterfly.com</a><br>
                     <img src="https://via.placeholder.com/150" alt="Picture of company's website in mobile view."><br>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc pharetra turpis ut leo facilisis bibendum. Nunc congue suscipit lectus, eu commodo dolor dapibus eget. Mauris nibh eros, semper id ligula sit amet, tempor fringilla sapien. Curabitur pretium aliquet justo. Nam.
+                    They order everything in how it's most often to be used. At the top they have the menu, then they have the limited time coupons, then some general section ads, and then moree specfic items.
                 </p>
             </div>
         </main>
