Added images and finished their formatting.

--- a/lesson2/design-principles.html
+++ b/lesson2/design-principles.html
@@ -29,7 +29,7 @@
                     <p>
                         Google<br>
                         <a href="https://www.google.com" target="_blank">google.com</a><br>
-                        <img src="https://via.placeholder.com/150" alt="Picture of company's website in mobile view."><br>
+                        <img src="images/google-mobile-view.png" alt="Picture of Google's website in mobile view."><br>
                         They use contrast to direct your eyes to the trending searches. They also use make the menu noticeable but not in your face.
                     </p>
                 </div>
@@ -38,7 +38,7 @@
                     <p>
                         Box Novel<br>
                         <a href="https://myboxnovel.com" target="_blank">myboxnovel.com</a><br>
-                        <img src="https://via.placeholder.com/150" alt="Picture of company's website in mobile view."><br>
+                        <img src="images/box-novel-mobile-view.png" alt="Picture of Box Novel's website in mobile view."><br>
                         There are not many options. There are just 2 sections at first, action and adventure. There are only 5 book options at any time. 
                     </p>
                 </div>
@@ -48,7 +48,7 @@
                 <p>
                     Shutterfly<br>
                     <a href="https://www.shutterfly.com" target="_blank">shutterfly.com</a><br>
-                    <img src="https://via.placeholder.com/150" alt="Picture of company's website in mobile view."><br>
+                    <img src="images/shutterfly-mobile-view.png" alt="Picture of Shutterfly's website in mobile view."><br>
                     They order everything in how it's most often to be used. At the top they have the menu, then they have the limited time coupons, then some general section ads, and then moree specfic items.
                 </p>
             </div>
