Fixed some formatting, grabbed the icon, filled in content for home, typography, and color scheme.

--- a/lesson3/index.html
+++ b/lesson3/index.html
@@ -28,17 +28,17 @@
                 Appropriate Site Name:<br>
                 Snowflake Chamber of Commerce<br><br>
                 Site Purpose:<br>
-                The site purpose is to<br><br>
+                The site purpose is to work to further the goals of our Chamber of Commerce. We need to create a healthy economy and protect the rights of our local businesses.<br><br>
                 Available Domain Name:<br>
                 http://snowflakechamber.com<br><br>
                 A Simple Logo:<br>
-                <img href="#">
+                <img src="images/icon.png" alt="A light blue snowflake.">
             </p>
         </main>
 
         <footer>
             
         </footer>
-        <script type="text/javascript" src="/js/main.js"></script>
+        <!-- <script type="text/javascript" src="/js/main.js"></script> -->
     </body>
 </html>
