--- a/lesson3/target-audience.html
+++ b/lesson3/target-audience.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>Home - Snowflake Chamber of Commerce</title>
+        <title>Target Audience - Snowflake Chamber of Commerce</title>
         <meta name="author" content="Danel G. Rasmussen">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="description" content="">
@@ -24,13 +24,24 @@
             <div><a href="typography.html">Typography</a></div>
         </nav>
         <main>
-            <ul>
-                <li>Appropriate Site Name</li>
-                <li>Site Purpose</li>
-                <li>Available Domain Name</li>
-                <p>http://snowflakechamber.com</p>
-                <li>A Simple Logo</li>
-            </ul>
+            <p>
+                Description of Target Audience:<br>
+                The target audience...<br><br>
+                Persona #1<br>
+                blah<br><br>
+                Persona #2<br>
+                blah<br><br>
+                Scenario #1<br>
+                blah<br><br>
+                Scenario #2<br>
+                blah<br><br>
+                Scenario #3<br>
+                blah<br><br>
+                Scenario #4<br>
+                blah<br><br>
+                Scenario #5<br>
+                blah<br><br>
+            </p>
         </main>
 
         <footer>
