--- a/lesson3/color-scheme.html
+++ b/lesson3/color-scheme.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>Home - Snowflake Chamber of Commerce</title>
+        <title>Color Scheme - Snowflake Chamber of Commerce</title>
         <meta name="author" content="Danel G. Rasmussen">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="description" content="">
@@ -24,13 +24,14 @@
             <div><a href="typography.html">Typography</a></div>
         </nav>
         <main>
-            <ul>
-                <li>Appropriate Site Name</li>
-                <li>Site Purpose</li>
-                <li>Available Domain Name</li>
-                <p>http://snowflakechamber.com</p>
-                <li>A Simple Logo</li>
-            </ul>
+            <p>
+                Header/Footer:<br>
+                #0B0B45<br><br>
+                Nav:<br>
+                #87cefa<br><br>
+                Everything Else:<br>
+                White
+            </p>
         </main>
 
         <footer>
