Filled in target audience.

--- a/lesson3/target-audience.html
+++ b/lesson3/target-audience.html
@@ -26,21 +26,30 @@
         <main>
             <p>
                 Description of Target Audience:<br>
-                The target audience...<br><br>
+                The target audiences are the local business owners and the people who wish to support them and defend them.<br><br>
+                
                 Persona #1<br>
-                blah<br><br>
+                Local business owners.<br>
+                They want to know how they are being helped and if they can recieve any extra of that help and/or help the Chamber of Commerce.<br><br>
+
                 Persona #2<br>
-                blah<br><br>
+                People looking to support their local business owners.<br>
+                This could be anyone, any age, work experience, or any background. They just have to want to help.<br><br>
+
                 Scenario #1<br>
-                blah<br><br>
+                A business is curious about how the chamber defends them and if they can support the defense.<br><br>
+
                 Scenario #2<br>
-                blah<br><br>
+                Somebody wants to learn how to help their local business owners and the economy.<br><br>
+
                 Scenario #3<br>
-                blah<br><br>
+                Somebody came across a law they thought was unjust and wanted to know what we are doing about it.<br><br>
+
                 Scenario #4<br>
-                blah<br><br>
+                A local business owner wants to know if we can help them get discounts or better deals.<br><br>
+
                 Scenario #5<br>
-                blah<br><br>
+                A bigger company wants to help out some of the local businesses so they look for how they can offer better deals to members of the Chamber of Commerce.<br><br>
             </p>
         </main>
 
