--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <h2>WDD 230 Assignment Portal</h2>
             <ul>
                 <li>Lesson 02: <a href="lesson2/design-principles.html">Design Principles</a></li>
-                <li>Lesson 03: <a href="#">Lesson 3</a></li>
+                <li>Lesson 03: <a href="lesson3/index.html">Website Planning Document</a></li>
                 <li>Lesson 04: <a href="#">Lesson 4</a></li>
                 <li>Lesson 05: <a href="#">Lesson 5</a></li>
                 <li>Lesson 06: <a href="#">Lesson 6</a></li>
