Added header content and formatting for mobile.

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -7,17 +7,32 @@
         <meta name="author" content="Danel G. Rasmussen">
         <meta name="description" content="">
 
-        <link rel="stylesheet" href="css/normalize.css">
-        <link rel="stylesheet" href="chamber/css/base.css">
-        <link rel="stylesheet" href="chamber/css/medium.css">
-        <link rel="stylesheet" href="chamber/css/large.css">
+        <link rel="stylesheet" href="../css/normalize.css">
+        <link rel="stylesheet" href="css/base.css">
+        <link rel="stylesheet" href="css/medium.css">
+        <link rel="stylesheet" href="css/large.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Noto+Sans&display=swap" rel="stylesheet">
     </head>
     <body>
         <header>
-            
+            <img src="images/icon.png" alt="" id="icon">
+            <h1>Snowflake</h1>
+            <h2>Chamber of Commerce</h2>
+            <nav>
+                <button id="hamburgerBtn"><span>&#9776;</span><span>X</span></button>
+                <ul id="primaryNav">
+                    <li class="active"><a href="#">Home</a></li>
+                    <li><a href="#">Discover</a></li>
+                    <li><a href="#">Directory</a></li>
+                    <li><a href="#">Join</a></li>
+                    <li><a href="#">Contact</a></li>
+                </ul>
+            </nav>
+            <img src="images/facebook.png" alt="" class="social">
+            <img src="images/twitter.png" alt="" class="social">
+            <p id="date">Saturday, 14 May 2022</p>
         </header>
 
         <main>
@@ -26,6 +41,6 @@
         <footer>
             
         </footer>
-        <script type="text/javascript" src="chamber/js/base.js"></script>
+        <script type="text/javascript" src="js/base.js"></script>
     </body>
 </html>
