Finished header except social media icons

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title></title>
+        <title>Snowflake Chamber of Commerce</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="author" content="Danel G. Rasmussen">
-        <meta name="description" content="">
+        <meta name="description" content="Snowflake, Arizona's Chamber of Commerce website.">
 
         <link rel="stylesheet" href="../css/normalize.css">
         <link rel="stylesheet" href="css/base.css">
