--- a/chamber/index.html
+++ b/chamber/index.html
@@ -30,8 +30,8 @@
                     <li><a href="#">Contact</a></li>
                 </ul>
             </nav>
-            <img src="images/facebook.png" alt="" class="social">
-            <img src="images/twitter.png" alt="" class="social">
+            <a href="https://www.facebook.com/pages/category/Community-Organization/Snowflake-Taylor-Chamber-of-Commerce-482438121795674/" target="_blank"><img src="images/facebook.png" alt="Image and link to our facebook." id="facebook"></a>
+            <a href="https://mobile.twitter.com/SnowTaylor_CofC" target="_blank"><img src="images/twitter.png" alt="Image and link to our twitter." id="twitter"></a>
             <p id="date">Saturday, 14 May 2022</p>
         </header>
 
