Added javascript to get current date.

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -17,7 +17,7 @@
     </head>
     <body>
         <header>
-            <img src="images/icon.png" alt="" id="icon">
+            <img src="images/icon.png" alt="Icon, a snowflake." id="icon">
             <h1>Snowflake</h1>
             <h2>Chamber of Commerce</h2>
             <nav>
