Started and completed main.

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -36,7 +36,29 @@
         </header>
 
         <main>
-            
+            <div>
+                <p><em>Hero with site name and call to action</em></p>
+            </div>
+
+            <div>
+                <p><em>Event</em></p>
+            </div>
+
+            <div>
+                <p><em>Weather</em></p>
+            </div>
+
+            <div>
+                <p><em>News Release</em></p>
+            </div>
+
+            <div class="spotlight">
+                <p><em>Spotlight 1</em></p>
+            </div>
+
+            <div class="spotlight">
+                <p><em>Spotlight 2</em></p>
+            </div>
         </main>
         <footer>
             
