Finished main for medium width.

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -51,13 +51,15 @@
             <div>
                 <p><em>News Release</em></p>
             </div>
+            
+            <div id="spotlights">
+                <div id="spotlight1">
+                    <p><em>Spotlight 1</em></p>
+                </div>
 
-            <div class="spotlight">
-                <p><em>Spotlight 1</em></p>
-            </div>
-
-            <div class="spotlight">
-                <p><em>Spotlight 2</em></p>
+                <div id="spotlight2">
+                    <p><em>Spotlight 2</em></p>
+                </div>
             </div>
         </main>
         <footer>
