Completed main medium.

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -36,20 +36,24 @@
         </header>
 
         <main>
-            <div>
+            <div id="call">
                 <p><em>Hero with site name and call to action</em></p>
             </div>
 
-            <div>
+            <div id="event">
                 <p><em>Event</em></p>
             </div>
 
-            <div>
+            <div id="weather">
                 <p><em>Weather</em></p>
             </div>
 
-            <div>
+            <div id="news">
                 <p><em>News Release</em></p>
+            </div>
+
+            <div id="join">
+                <p><em>Join</em></p>
             </div>
             
             <div id="spotlights">
