Main fully completed.

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -64,6 +64,10 @@
                 <div id="spotlight2">
                     <p><em>Spotlight 2</em></p>
                 </div>
+
+                <div id="spotlight3">
+                    <p><em>Spotlight3</em></p>
+                </div>
             </div>
         </main>
         <footer>
