Fixed double id of icon.

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -17,7 +17,7 @@
     </head>
     <body>
         <header>
-            <img src="images/icon.png" alt="Icon, a snowflake." id="icon">
+            <img src="images/icon.png" alt="Icon, a snowflake." class="icon">
             <h1>Snowflake</h1>
             <h2>Chamber of Commerce</h2>
             <nav>
@@ -72,7 +72,7 @@
         </main>
         <footer>
             <div id="main">
-                <img src="images/icon.png" alt="Icon, a snowflake." id="icon">
+                <img src="images/icon.png" alt="Icon, a snowflake." class="icon">
                 <h2 id="title">Snowflake Chamber of Commerce</h1>
                 <p id="address">113 Main St<br>Snowflake, AZ 85937</p>
                 <p id="email">us@snowflakechamber.com</p>
