Fixed other various errors.

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -73,14 +73,14 @@
         <footer>
             <div id="main">
                 <img src="images/icon.png" alt="Icon, a snowflake." class="icon">
-                <h2 id="title">Snowflake Chamber of Commerce</h1>
+                <h2 id="title">Snowflake Chamber of Commerce</h2>
                 <p id="address">113 Main St<br>Snowflake, AZ 85937</p>
                 <p id="email">us@snowflakechamber.com</p>
                 <p id="phone">(928) 536-4331</p>
                 <p id="map"><a href="https://www.google.com/maps?cid=18117877008070969669" target="_blank">Location</a></p>
             </div>
             <div id="base">
-                <p id="copy">&copy 2022 Snowflake Chamber</p>
+                <p id="copy">&copy; 2022 Snowflake Chamber</p>
                 <p>Daniel Rasmussen</p>
                 <p>WDD 230 Project</p>
                 <p id="lastUpdated"></p>
