--- a/chamber/index.html
+++ b/chamber/index.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>Snowflake Chamber of Commerce</title>
+        <link rel="icon" href="favicon.ico" type="image/x-icon">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="author" content="Danel G. Rasmussen">
         <meta name="description" content="Snowflake, Arizona's Chamber of Commerce website.">
