--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <li>Lesson 02: <a href="lesson2/design-principles.html">Design Principles</a></li>
                 <li>Lesson 03: <a href="lesson3/index.html">Website Planning Document</a></li>
                 <li>Lesson 04: <a href="chamber/index.html">Chamber of Commerce</a></li>
-                <li>Lesson 05: <a href="#">Lesson 5</a></li>
+                <li>Lesson 05: <a href="lesson5/bom.html">Dom Manipulation</a></li>
                 <li>Lesson 06: <a href="#">Lesson 6</a></li>
                 <li>Lesson 07: <a href="#">Lesson 7</a></li>
                 <li>Lesson 08: <a href="#">Lesson 8</a></li>
