Added banner which shows on mondays and tuesdays.

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -35,7 +35,9 @@
             <a href="https://mobile.twitter.com/SnowTaylor_CofC" target="_blank"><img src="images/twitter.png" alt="Image and link to our twitter." id="twitter"></a>
             <p id="date">Saturday, 14 May 2022</p>
         </header>
-
+        <div id="banner">
+            <p>🤝🏼 Come join us for the chamber meet and greet Wednesday at 7:00 p.m.</p>
+        </div>
         <main>
             <div id="call">
                 <p><em>Hero with site name and call to action</em></p>
