Finished content and formatting of content for mobile view.

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -40,36 +40,58 @@
         </div>
         <main>
             <div id="call">
-                <p><em>Hero with site name and call to action</em></p>
+                <img src="images/banner.jpg" alt="Aerial view of a city">
+                <h3>Welcome!</h3>
+                <button>Join Us</button>
             </div>
 
             <div id="event">
-                <p><em>Event</em></p>
+                <h3>May Lunch and Learn</h3>
+                <p>This month's speaker/sponser is Chase Bank!<br>Join us at the Snowflake Social Hall:<br>May 25, 2022 @ 12:00 pm - 1:00 pm</p>
+                <img src="images/chase bank.png" alt="Chase bank's symbol">
             </div>
 
             <div id="weather">
-                <p><em>Weather</em></p>
+                <h3>Weather</h3>
+                <img src="images/clear weather.png">
+                <p id="temp">74°F</p>
+                <p id="conditions">Clear Sky</p>
+                <div>
+                    <p>Wind Speed: 32 mph</p>
+                    <p>Wind Chill: 66°F</p>
+                </div>
             </div>
 
             <div id="news">
-                <p><em>News Release</em></p>
+                <h3>News</h3>
+                <p>The Town of Snowflake Town Council held a public hearing on Tuesday February 1, 2022. The purpose of the hearing was to consider the adoption of the general plan. The general plan was adopted during the council meeting after the public hearing.</p>
             </div>
 
             <div id="join">
-                <p><em>Join</em></p>
+                <h3>Join Us!</h3>
+                <p>Want to become a chamber member? Fill out an online application.</p>
             </div>
             
             <div id="spotlights">
                 <div id="spotlight1">
-                    <p><em>Spotlight 1</em></p>
+                    <h3>Chase Bank</h3>
+                    <img src="images/chase bank.png" alt="Chase bank logo">
+                    <p>Helping you make the most of your money.</p>
+                    <p class="contact">Phone: (928) 537-4311</p>
                 </div>
 
                 <div id="spotlight2">
-                    <p><em>Spotlight 2</em></p>
+                    <h3>Streets on Main</h3>
+                    <img src="images/streets on main.png" alt="Streets on main logo">
+                    <p>A locally owned and family operated restaurant.</p>
+                    <p class="contact">Phone: (928) 275-3663</p>
                 </div>
 
                 <div id="spotlight3">
-                    <p><em>Spotlight3</em></p>
+                    <h3>El Cupidos</h3>
+                    <img src="images/el cupidos.png" alt="El cupidos logo">
+                    <p>We are fine, fresh and best of all, Mexican.</p>
+                    <p class="contact">Phone: (928) 537-4311</p>
                 </div>
             </div>
         </main>
