Finished formatting for computer view.

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -41,7 +41,7 @@
         <main>
             <div id="call">
                 <img src="images/banner.jpg" alt="Aerial view of a city">
-                <h3>Welcome!</h3>
+                <h3>Welcome! (placeholder image)</h3>
                 <button>Join Us</button>
             </div>
 
