Fixed issues with validating HTML.

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -48,12 +48,12 @@
             <div id="event">
                 <h3>May Lunch and Learn</h3>
                 <p>This month's speaker/sponser is Chase Bank!<br>Join us at the Snowflake Social Hall:<br>May 25, 2022 @ 12:00 pm - 1:00 pm</p>
-                <img src="images/chase bank.png" alt="Chase bank's symbol">
+                <img src="images/chase_bank.png" alt="Chase bank's symbol">
             </div>
 
             <div id="weather">
                 <h3>Weather</h3>
-                <img src="images/clear weather.png">
+                <img src="images/clear_weather.png" alt="Sun">
                 <p id="temp">74°F</p>
                 <p id="conditions">Clear Sky</p>
                 <div>
@@ -75,21 +75,21 @@
             <div id="spotlights">
                 <div id="spotlight1">
                     <h3>Chase Bank</h3>
-                    <img src="images/chase bank.png" alt="Chase bank logo">
+                    <img src="images/chase_bank.png" alt="Chase bank logo">
                     <p>Helping you make the most of your money.</p>
                     <p class="contact">Phone: (928) 537-4311</p>
                 </div>
 
                 <div id="spotlight2">
                     <h3>Streets on Main</h3>
-                    <img src="images/streets on main.png" alt="Streets on main logo">
+                    <img src="images/streets_on_main.png" alt="Streets on main logo">
                     <p>A locally owned and family operated restaurant.</p>
                     <p class="contact">Phone: (928) 275-3663</p>
                 </div>
 
                 <div id="spotlight3">
                     <h3>El Cupidos</h3>
-                    <img src="images/el cupidos.png" alt="El cupidos logo">
+                    <img src="images/el_cupidos.png" alt="El cupidos logo">
                     <p>We are fine, fresh and best of all, Mexican.</p>
                     <p class="contact">Phone: (928) 537-4311</p>
                 </div>
@@ -111,6 +111,6 @@
                 <p id="lastUpdated"></p>
             </div>
         </footer>
-        <script type="text/javascript" src="js/base.js"></script>
+        <script src="js/base.js"></script>
     </body>
 </html>
