Made temp into a heading.

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -54,7 +54,7 @@
             <div id="weather">
                 <h3>Weather</h3>
                 <img src="images/clear_weather.png" alt="Sun">
-                <p id="temp">74°F</p>
+                <h4 id="temp">74°F</h4>
                 <p id="conditions">Clear Sky</p>
                 <div>
                     <p>Wind Speed: 32 mph</p>
